[package]
name = "cache"
version = "0.1.3-alpha.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
publish = false

[dependencies]
async-cell-lock = { git = "https://github.com/danylaporte/async-cell-lock.git", branch = "main" }
paged = { git = "https://github.com/danylaporte/paged.git", branch = "main" }
